Updated the notebook

--- a/lab-comparing-models.ipynb
+++ b/lab-comparing-models.ipynb
@@ -8064,11 +8064,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "From the results, we can see that there's a great variance in scores, with MLP having the best overall scores, followed by KNN and then LinearRegression."
+   ]
   }
  ],
  "metadata": {
